--- a/p8105_hw3_ht2630.md
+++ b/p8105_hw3_ht2630.md
@@ -33,14 +33,15 @@ data("brfss_smart2010")
 health_df = brfss_smart2010
 
 colnames(health_df) = c("Year", "Location_Abbreviation", "Location_Description", "Class", "Topic", "Health_Question", "Response", "Sample_Size", "Data_value", "Confidence_Limit_Low", "Confidence_Limit_High", "Display_Order", "Data_Value_Unit", "Data_Value_Type", "Data_Value_Footnote_Symbol", "Data_Value_Footnote", "Data_Source", "Class_ID", "Topic_ID", "Location_ID", "Question_ID", "RESP_ID", "Geographic_Location")
-
+  
 health_df = subset(health_df, Topic == "Overall Health" & Response %in% c("Poor", "Fair", "Good", "Very good", "Excellent"))
 
 filtered_health_df = health_df |>
-  filter(Topic == "Overall Health") |> 
-  filter(Response %in% c("Poor", "Fair", "Good", "Very good", "Excellent")) |> 
-  mutate(Response = as.factor(Response), Response = ordered(Response, levels = c("Poor", "Fair", "Good", "Very good", "Excellent")), ordered = TRUE) 
+  filter(Topic == "Overall Health", Response %in% c("Poor", "Fair", "Good", "Very good", "Excellent")) |>
+  mutate(Response = factor(Response, levels = c("Excellent", "Very good", "Good", "Fair", "Poor"), ordered = TRUE))
+```
 
+``` r
 Year_2002 = subset(health_df, Year == 2002) |> 
   group_by(Location_Abbreviation) |> 
   summarise(n_occurrences = n()) |> 
@@ -78,7 +79,7 @@ ggplot(Excellent_health_df, aes(x = Year, y = average_data_value, group = Locati
   scale_color_discrete(name = "State")
 ```
 
-![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
+![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
 
 ``` r
 NY_health_df = health_df |> 
@@ -92,7 +93,7 @@ ggplot(NY_health_df, aes(x = Data_value, fill = Response)) +
   ylab("Frequency")
 ```
 
-![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
 ------------------------------------------------------------------------
 
@@ -143,7 +144,7 @@ Merged_data = merge(nhanes_covar, nhanes_accel, by = "SEQN")|>
   scale_fill_manual(values = c("Male" = "yellow", "Female" = "red"))
 ```
 
-![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
 
 ``` r
 Gender_education_table = Merged_data |> 
@@ -184,7 +185,7 @@ Merged_data = Merged_data |>
 
     ## `geom_smooth()` using formula = 'y ~ x'
 
-![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
 Comment: In the group of being less than high school, males and females
 tend to have similar scatterplot and trendline. But males have lower
 activity than female with education of being high school equivalent. But
@@ -218,7 +219,7 @@ ggplot(Average_data, aes(x = as.numeric(sub("min", "", minute)), y = mean_accele
 
     ## `geom_smooth()` using formula = 'y ~ x'
 
-![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+![](p8105_hw3_ht2630_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 Comment: Similarly, we can see males and females are similar in the
 group of “less than high school”. Males have slightly lower average
 accelerometer reading in the group of “high school equivalent”. However,
